@@ -198,11 +198,11 @@ jobType.option.Alert               = Alert
 jobType.option.Burst               = Burst
 jobType.option.CacheAppend         = Cache ResultSet (Append)
 jobType.option.CacheInsert         = Cache ResultSet (Delete & Insert)
-jobType.option.CondEmailAttachment = Conditional Email Output (Attachment)
-jobType.option.CondEmailInline     = Conditional Email Output (Inline)
+jobType.option.CondEmailAttachment = Conditional Email (Attachment)
+jobType.option.CondEmailInline     = Conditional Email (Inline)
 jobType.option.CondPublish         = Conditional Publish
-jobType.option.EmailAttachment     = Email Output (Attachment)
-jobType.option.EmailInline         = Email Output (Inline)
+jobType.option.EmailAttachment     = Email (Attachment)
+jobType.option.EmailInline         = Email (Inline)
 jobType.option.JustRun             = Just Run It
 jobType.option.Print               = Print
 jobType.option.Publish             = Publish
@@ -603,6 +603,8 @@ reports.format.slkZip                    = Spreadsheet (zip slk)
 reports.format.tsv                       = File (tsv)
 reports.format.tsvGz                     = File (gzip tsv)
 reports.format.tsvZip                    = File (zip tsv)
+reports.format.txt                       = File (txt)
+reports.format.txtZip                    = File (zip txt)
 reports.format.xls                       = Spreadsheet (xls)
 reports.format.xlsZip                    = Spreadsheet (zip xls)
 reports.format.xlsx                      = Spreadsheet (xlsx)
