@@ -576,6 +576,8 @@ reports.format.slkZip                    = Lahajedwali (zip slk)
 reports.format.tsv                       = Faili (tsv)
 reports.format.tsvGz                     = Faili (gzip tsv)
 reports.format.tsvZip                    = Faili (zip tsv)
+reports.format.txt                       = Faili (txt)
+reports.format.txtZip                    = Faili (zip txt)
 reports.format.xls                       = Lahajedwali (xls)
 reports.format.xlsZip                    = Lahajedwali (zip xls)
 reports.format.xlsx                      = Lahajedwali (xlsx)
